# Pj-FAER-Dev

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENT_LOG.md  HANDOVER.md  README.md  pyproject.toml  run_log.jsonl
.claude/: settings.json
demo_app/: _engine_runner.py  _path_setup.py  app.py
demo_app/components/: bottleneck.py  event_rate.py  facility_panel.py  journey_heatmap.py  journey_waterfall.py  network_panel.py  paradigm_pie.py  state_helpers.py  survivability_curve.py  timeline_panel.py  xray_panel.py
demo_app/pages/: 1_scenario.py  2_simulation.py  3_analytics.py  4_monte_carlo.py  5_architecture.py  6_engine_room.py
docs/: CURRENT.md  DEMO_APP_WIRING.md  ENGINE_ROOM_IDEATION.md  MAAFI_CROSS.md  MAAFI_FORWARD.md  MAAFI_REDTEAM.md  MAAFI_VERDICT.md  MVP_ACCEPTANCE.md  NB_DEMO_lsco_showcase.md
docs/MAAFI/: FAER_MAAFI_INTERROGATION_v3.md  MAAFI_ARBITER.md  MAAFI_BACKWARD.md  MAAFI_CROSS.md  MAAFI_FORWARD.md
docs/MVP/: BUILD_F0.md  BUILD_S1.md  BUILD_S1_1.md  BUILD_S2.md  BUILD_S2D.md  BUILD_S3.md  CROSSOVER_PROBES.md  CURRENT.md  MVP_ACCEPTANCE.md  PREREG_VR1.md  RNG_DIAGNOSTIC.md  (+11 more)
scripts/: check_claude_md.py  regression.py
tests/: conftest.py  harness.py  test_analytics.py  test_canonical.py  test_capability_retriage.py  test_capability_routing.py  test_emitter.py  test_facility_writer.py  test_harness.py  test_hold_gate_integration.py  test_metrics.py  test_multi_poi.py  test_oracles.py  test_pfc.py  test_phase1_integration.py  test_rng_keyed.py  test_rng_lint.py  test_routing.py  test_slice1_config.py  test_transport_origin.py  test_waypoints.py
(+114 files in other folders)
