[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "faer-dev"
version = "0.1.0"
description = "FAER poly-hybrid simulation engine — development branch"
requires-python = ">=3.10"
dependencies = [
    "simpy>=4.1.1",
    "numpy>=1.24",
    "networkx>=3.0",
    "pydantic>=2.0",
    "py-trees>=2.2",
    "pyyaml>=6.0",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "memory-profiler>=0.61",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
